--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
   <!-- Font Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Pacientes</title>
 </head>
 
@@ -29,12 +30,12 @@
         <div class="col-md-4">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link light-gray" aria-current="page" id="pacientes">Pacientes</a>
+              <a class="nav-link light-gray" aria-current="page" id="patients">Pacientes</a>
             </li>
 
-            <!--<li class="nav-item">
-              <a class="nav-link" id="favorites">Favorites</a>
-            </li>-->
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#createPatientModal" id="new-patient">Novo Paciente</a>
+            </li>
           </ul>
         </div>
         <div class="col-md-8"></div>
@@ -83,6 +84,24 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade modal-xl" id="createPatientModal" tabindex="-1" aria-labelledby="createPatientModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="createPatientModalLabel"><i class="fa-solid fa-hospital-user fs-20 me-2"></i> Cadastrar Paciente</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success add-patient">Salvar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Bootstrap -->
@@ -100,6 +119,8 @@
 <script type="text/javascript" src="js/pacientes.js"></script>
 <!-- Functions -->
 <script type="text/javascript" src="js/functions.js"></script>
+<!-- Menu -->
+<script type="text/javascript" src="js/menu.js"></script>
 <script>
   $(document).ready(function() {
     // Fetches and listing all patients
@@ -108,6 +129,10 @@
     // Reloads location
     $('.reload').click(function () {
       location.reload();
+    });
+
+    $('#novo-paciente').click(function() {
+      alert('Novo paciente!')
     });
   });
 </script>
