--- a/web/index.html
+++ b/web/index.html
@@ -30,11 +30,11 @@
         <div class="col-md-4">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link light-gray" aria-current="page" id="patients">Pacientes</a>
+              <a class="nav-link light-gray" href="./index.html" aria-current="page" id="patients">Listar</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#createPatientModal" id="new-patient">Novo Paciente</a>
+              <a class="nav-link" href="./cadastrar_paciente.html" id="new-patient">Cadastrar</a>
             </li>
           </ul>
         </div>
@@ -73,6 +73,7 @@
             <th>Nome</th>
             <th>CPF</th>
             <th>Data de Nascimento</th>
+            <th>Ações</th>
           </tr>
           </thead>
           <tbody id="table-body-patients">
@@ -86,18 +87,70 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade modal-xl" id="createPatientModal" tabindex="-1" aria-labelledby="createPatientModalLabel" aria-hidden="true">
+  <div class="modal fade modal-xl mt-7" id="updatePatientModal" tabindex="-1" aria-labelledby="updatePatientModallLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="createPatientModalLabel"><i class="fa-solid fa-hospital-user fs-20 me-2"></i> Cadastrar Paciente</h1>
+          <h1 class="modal-title fs-5" id="updatePatientModalLabel"><i class="fa-solid fa-hospital-user fs-20 me-2"></i>Dados Paciente</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <form autocomplete="off" id="form-update">
+
+            <input type="hidden" name="id" id="id">
+
+            <div class="row">
+              <div class="col">
+                <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome" required>
+              </div>
+
+              <div class="col">
+                <input type="text" class="form-control cpf" name="cpf" id="cpf" placeholder="CPF" required>
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+              </div>
+
+              <div class="col">
+                <input type="date" class="form-control" name="data_nascimento" id="data_nascimento" required>
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col">
+                <input type="tel" class="form-control" name="telefone" id="telefone" placeholder="Telefone" required>
+              </div>
+              <div class="col">
+                <input type="text" class="form-control cep" name="cep" id="cep" placeholder="CEP">
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col">
+                <input type="text" class="form-control" name="logradouro" id="rua" placeholder="Rua">
+              </div>
+
+              <div class="col">
+                <input type="text" class="form-control" name="bairro" id="bairro" placeholder="Bairro">
+              </div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col">
+                <input type="text" class="form-control" name="localidade" id="cidade" placeholder="Cidade">
+              </div>
+
+              <div class="col">
+                <input type="text" class="form-control" name="uf" id="estado" placeholder="Estado">
+              </div>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success add-patient">Salvar</button>
+          <button type="button" class="btn btn-success" id="btn-update-patient">Salvar</button>
         </div>
       </div>
     </div>
@@ -131,8 +184,40 @@
       location.reload();
     });
 
-    $('#novo-paciente').click(function() {
-      alert('Novo paciente!')
+    // Masks
+    $(".cpf").inputmask({"mask": "999.999.999-99"});
+    $(".cep").inputmask({"mask": "99.999-999"});
+
+    $('input[type="tel"]').inputmask({
+      mask: ['(99) 9999-9999', '(99) 99999-9999'],
+      keepStatic: true,
+      inputmode: 'tel',
+      greedy: false
+    });
+
+    // Fetches address by CEP
+    $('#cep').keyup(function () {
+      if ($(this).val().length === 10) {
+        getDataCEP('cep', 'rua', 'bairro', 'cidade', 'estado');
+      }
+    });
+
+    $('#btn-update-patient').click(function() {
+
+      var id = $('#id').val();
+      var form = $('#form-update');
+      var formDataArray = form.serializeArray();
+
+      formDataArray.forEach(function(field) {
+        if (field.name === 'cpf' || field.name === 'cep') {
+          field.value = removeMask(field.value);
+        }
+      });
+
+      var formDataString = $.param(formDataArray);
+
+      // console.log(formDataString);
+      updatePacient(id, formDataString);
     });
   });
 </script>
