Search by cpf or name implementation

--- a/web/index.html
+++ b/web/index.html
@@ -54,16 +54,14 @@
       <div class="col-md-4"></div>
     </div>
 
-    <div class="col-md-6 mt-5 display-flex">
-      <div class="col-md-8 ms-5">
-        <input class="form-control" type="text" id="search" placeholder="Digite...">
+    <div class="col-md-6 mt-5 ms-5 display-flex">
+      <div class="col-md-10">
+        <input class="form-control" type="text" id="search" placeholder="Pesquise por cpf ou nome...">
       </div>
-
-      <div class="col-md-4"></div>
     </div>
 
     <div class="col-md-12 mt-4 div-info">
-      <p><span id="total-itens">0</span> registro(s) disponíveis no banco de dados:</p>
+      <p><span class="ms-1" id="total-itens">0</span> registro(s) disponíveis no banco de dados:</p>
 
       <div class="col-md-11 margin-auto mt-5">
         <table class="table table-striped table-dark text-center">
